# OpenViking

.github/workflows/: agent-fix.yml  agent-reconcile.yml  agent-triage.yml
automation/viking-forge/: .dockerignore  .gitignore  README.md  pyproject.toml
automation/viking-forge/deploy/: .env.example  Caddyfile  Dockerfile  docker-compose.yml  viking-forge.service
automation/viking-forge/docs/: deployment.md  design.md  implementation-plan.md  local-execution-design.md  local-execution-implementation-plan.md
automation/viking-forge/prompts/: fix.md  triage.md
automation/viking-forge/schemas/: fix.json  triage.json
automation/viking-forge/scripts/: __init__.py  guard_patch.py  issue_context.py  labels.py  post_callback.py  reconcile.py  validate_patch.py
automation/viking-forge/src/viking_forge/: __init__.py  app.py  callbacks.py  codex.py  config.py  github.py  main.py  notifications.py  security.py  store.py  validation.py  webhooks.py  worker.py  workspace.py
automation/viking-forge/src/viking_forge/static/: app.css
automation/viking-forge/src/viking_forge/templates/: index.html
automation/viking-forge/tests/: test_app.py  test_assets.py  test_callbacks.py  test_codex.py  test_config.py  test_github.py  test_notifications.py  test_scripts.py  test_security.py  test_store.py  test_webhooks.py  test_worker.py  test_workspace.py
benchmark-ov/locomo/: README.md
docs/plans/: agent-tool-name-convergence.md
examples/codex-memory-plugin/: README.md
examples/openclaw-plugin/: auto-recall.ts  client.ts  config.ts  context-engine.ts  index.ts  (+2 more)
(+41 files in other folders)
