[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "viking-forge"
version = "0.1.0"
description = "Human-gated Codex issue automation for OpenViking"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.128.0",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "pyjwt[crypto]==2.10.1",
  "python-multipart==0.0.20",
  "uvicorn==0.39.0",
]

[project.optional-dependencies]
test = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/viking_forge"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
